# TranslatorDiscordBot

./: .gitignore  README.md  keep_alive.py  log.csv  main.py  privacy_policy.md  pyproject.toml  terms_of_service.md
cogs/: cog_example.py  cog_translate.py
